fix: Fix review header spacing for medium layouts

--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,7 @@ nav h1 a {
   order: 10;
   font-size: 0.8em;
   font-variant: small-caps;
-  width: 100%;
+  width: 40%;
   text-align: right;
 }
 
@@ -505,14 +505,15 @@ nav h1 a {
   flex-grow: 0;
 }
 
-@media screen and (min-width: 591px) and (max-width: 767px) {
-  .review-rating {
-    width: 20%;
-  }
-
-  .review-name,
+@media screen and (max-width: 591px) {
   .review-date {
-    width: 40%;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .review-date {
+    width: 100%;
   }
 }
 
